# Shell_Frame_Engine

./: README.md  pyproject.toml
examples/: example.py  readme.md
src/shell_frame_engine/: engine.py  shell_frame.py  vertical_container.py
