[project]
name = "shell-frame-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Aldurim",email = "aldurimhecker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "shell_frame_engine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "examples.example:main"

